Toggle sidebar on mobile devices and fix nav breakpoint styling

--- a/src/scss/bootstrap-custom/_navbar.scss
+++ b/src/scss/bootstrap-custom/_navbar.scss
@@ -98,7 +98,7 @@
         }
 
         > li > a {
-            @media(max-width: $screen-size-md) {
+            @media(max-width: $screen-size-lg) {
                 padding-left: $content-padding-large;
                 padding-top: $content-padding-small;
                 padding-right: $content-padding-large;
